# tietiezhi

./: .gitignore  AGENTS.md  CLAUDE.md  Info.plist  LICENSE  Makefile  Package.resolved  Package.swift  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  ROADMAP.md  Taskfile.yml  build.sh  design-qa.md  go.mod  go.sum  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
.github/: RELEASE_NOTES.md
.github/workflows/: app-ci.yml  desktop.yml  pages.yml  release-all.yml  release-windows.yml  release.yml  server-ci.yml  store-msix.yml
Sources/Orbit/App/: AppController.swift  AppDelegate.swift  main.swift
Sources/Orbit/Capture/: AIAnnotator.swift  AXScanner.swift  Annotation.swift  AnnotationCanvas.swift  CaptureEngine.swift  CaptureOverlay.swift  CapturePreview.swift  CaptureSettings.swift  OCRService.swift  PinWindow.swift  ScreenCapturer.swift
Sources/Orbit/Dictation/: AudioCapture.swift  DictationAudioArchive.swift  DictationEngine.swift  DictationHistory.swift  DictationQueue.swift  FeedbackSoundPlayer.swift  HotkeyMonitor.swift  LLM.swift  Pill.swift  TextInserter.swift  Transcriber.swift
Sources/Orbit/Models/: Agent.swift  AppUpdate.swift  ChannelAdapter.swift  Chat.swift  FeedbackSound.swift  ModelCard.swift  Settings.swift  SettingsSection.swift  Shortcut.swift  Skill.swift  ToolRegistry.swift  Usage.swift
Sources/Orbit/Networking/: ChatClient.swift  GitHubUpdater.swift  ImageClient.swift  MCPManager.swift  ProviderAPI.swift  VideoClient.swift
Sources/Orbit/Persistence/: ChatStore.swift  GenerationStore.swift  ScreenshotHistoryStore.swift  SettingsStore.swift  SkillStore.swift  UsageStore.swift
Sources/Orbit/Support/: APIErrorHint.swift  AgentTools.swift  Keycodes.swift  Permissions.swift  SQLite.swift  ShortcutRunner.swift  StatusBarIcon.swift
Sources/Orbit/UI/: AddProviderSheet.swift  AgentsView.swift  CaptureSettingsViews.swift  ChatComposerField.swift  ChatDetailView.swift  ChatRootView.swift  ChatSidebarView.swift  Components.swift  CreationWorkspaceView.swift  DictationBasicView.swift  DictationHistoryView.swift  DictationModesView.swift  FeedbackSoundsView.swift  MCPServersView.swift  MarkdownRendering.swift  ModelsView.swift  OnboardingView.swift  OrbitBrandView.swift  PageScaffold.swift  PermissionsView.swift  ProvidersView.swift  SettingsRootView.swift  SettingsSidebarView.swift  ShortcutsView.swift  SkillsView.swift  SyntaxHighlighter.swift  ToolsView.swift  UsageStatsView.swift
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/chat/: chat_controller.dart
app/lib/core/: chat_client.dart  interconnect.dart  models.dart  settings_store.dart  transcriber.dart
app/lib/dictation/: audio_recorder.dart  dictation_controller.dart  dictation_hotkey.dart  text_inserter.dart
app/lib/ui/: chat_view.dart  dictation_pill.dart  interconnect_view.dart  settings_view.dart  shell.dart  theme.dart
app/linux/: CMakeLists.txt
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: Info.plist  Release.entitlements
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/web/: index.html
app/windows/runner/: Runner.rc
cmd/server/: main.go
configs/: config.example.yaml
desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/scripts/: set-release-version.mjs
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  process.rs
desktop/src-tauri/src/agent/: events.rs  loop_.rs  prompt.rs
desktop/src-tauri/src/commands/: assets.rs  capsule.rs  chat.rs  conversations.rs  dictation.rs  gateway_auth.rs  hotkey.rs  models.rs  projects.rs  providers.rs  settings.rs  text_insert.rs  workspace.rs
desktop/src-tauri/src/mcp/: mod.rs
desktop/src-tauri/src/tools/: bash.rs  mod.rs
desktop/src/components/: app-icon-loader.tsx  app-sidebar.tsx  gateway-account-button.tsx  product-mode-switcher.tsx  theme-provider.tsx
desktop/src/dev/: tauri-mock.ts
desktop/src/lib/: api.ts  product-mode.ts  recorder.ts
desktop/src/stores/: chat.ts  ui.ts
desktop/store/listing/: submission-notes.md
docs/: CODE_SIGNING.md  PRIVACY.md  README.zh-CN.md  ROADMAP.md  TOOL-RUNTIME.md
internal/agent/: agent.go  approval.go  compression.go  delegate.go  loop_detector.go  skill_save.go  skill_tools.go  tools.go
internal/channel/: channel.go  manager.go
internal/channel/feishu/: feishu.go  feishu.go.bak
internal/channel/http/: api.go
internal/channel/telegram/: telegram.go
internal/command/: command.go
internal/config/: config.go  config_test.go
internal/cron/: cron.go  tools.go
internal/heartbeat/: heartbeat.go
internal/hook/: hook.go  scripts.go  types.go
internal/llm/: openai.go  provider.go
internal/mcp/: mcp.go
internal/media/: processor.go  uploads.go
internal/memory/: markdown.go  memory.go  snapshot.go
internal/observability/: audit.go  tracker.go
internal/sandbox/: docker.go
internal/scheduler/: scheduler.go
internal/server/: management.go  server.go  webui.go
internal/session/: session.go
internal/skill/: loader.go  skill.go
internal/subagent/: subagent.go  tools.go
internal/tool/: tool.go
internal/tool/builtin/: builtin.go  (+5 more)
internal/webui/: embed.go
internal/workspace/: workspace.go
server/: go.mod
src/: App.tsx  Pill.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: asr.rs  commands.rs  config.rs  dictation.rs  hotkey.rs  lib.rs  llm.rs  realtime.rs  volcano.rs
src/lib/: api.ts  types.ts
ui/: README.md  package-lock.json  package.json
ui/docs/: shadcn-svelte-llms.txt
web/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
website/: README.md  package-lock.json  package.json  tailwind.config.js
website/public/: app.js  index.html
website/src/: styles.css
(+30 files in other folders)
