[package]
name = "orbit"
version = "0.1.0"
description = "Orbit — an open, multimodal, decentralized agent platform."
authors = ["Orbit contributors"]
license = "MIT"
repository = "https://github.com/tietiezhi-1216/Orbit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"
hound = "3.5"

# HTTP + WebSocket clients (OpenAI)
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"

# Auto-typing for inserting recognized text
enigo = "0.2"

# Utilities
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# Global hotkey via a CGEventTap (keycode-only — no main-thread HIToolbox calls)
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"

