[package]
name = "tietiezhi-desktop"
version = "0.1.0"
description = "铁铁汁 —— AI 中转站官方桌面客户端"
edition = "2021"

# Lib target keeps the app core reusable for future entry points (e.g. mobile).
[lib]
name = "tietiezhi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
