[package]
name = "tietiezhi-desktop"
version = "2026.7.24-t011819"
description = "铁铁汁 —— AI 中转站官方桌面客户端"
edition = "2021"
license = "Apache-2.0"

# Lib target keeps the app core reusable for future entry points (e.g. mobile).
[lib]
name = "tietiezhi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls avoids the OpenSSL toolchain dependency on Windows CI runners.
# Keep system-proxy explicit because disabling reqwest's default features also
# disables reading the OS proxy configuration on macOS and Windows.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "system-proxy"] }
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "sync", "time", "process", "io-util", "fs"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tauri-plugin-dialog = "2.7.1"
# Official Model Context Protocol Rust SDK; types are isolated inside src/mcp/.
rmcp = { version = "2.2.0", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
# rmcp is on reqwest 0.13 while the app is on 0.12; alias the newer one just
# for constructing the MCP HTTP transport client.
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = ["rustls", "system-proxy"] }
http = "1"
regex = "1"
globset = "0.4"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dunce = "1.0.5"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
base64 = "0.22.1"
mime_guess = "2"
arboard = "3.6.1"
tauri-plugin-window-state = "2.4.1"
dirs = "6.0.0"
tauri-plugin-global-shortcut = "2.3.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# The SSE integration test runs a raw TCP mock relay.
tokio = { version = "1", features = ["net", "io-util", "rt", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-graphics = "0.25.0"
